<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="more_details_title">More Details</string>
    <string name="try_again">Try Again</string>
    <string name="home_bottom_icon">Home</string>
    <string name="fav_bottom_icon">Favourite</string>
    <string name="settings_icon">Settings</string>
    <string name="allow_btn">Allow</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="maps">Maps</string>
    <string name="check_btn">Check</string>
    <string name="wind_speed_changing">You have to change temp also</string>
    <string name="temp_changing">You have to change temp also</string>
    <string name="no_internet">there is no internet to fetch the weather data , check your wifi ?</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="meter">Meter / Sec</string>
    <string name="mile">Mile / Hour</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="temp">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="error_message">Something Wrong Happens</string>

    <string name="choose_gps">Choose from map</string>
    <string name="snack_bar_no_network">Check your network please </string>
    <string name="no_location_permission">We cannot fetch your location.
    Please allow Weather to access your location</string>
    <string name="notification_center">Notification Center</string>
    <string name="alarm_text">Alarm</string>
    <string name="alert_text">Alert</string>
    <string name="start_btn">Set Alarm</string>
    <string name="end_btn">End</string>
    <string name="select_title">Select Place</string>
    <string name="please_select_date_first">Please select the time and date first</string>
    <string name="choose_the_time">Choose the alarm time</string>
    <string name="choose_the_date">Choose the alarm date</string>
</resources>