<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notification.view.NotificationFragment">
    <TextView
        android:id="@+id/alert_alarm_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/notification_center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/drawable_radio_group_tab_background"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_alarm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/secondary_button"

        android:text="@string/start_btn"
        android:textColor="@color/endPurple"
        app:layout_constraintTop_toBottomOf="@id/fav_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/alert_alarm_radio_group"
        app:layout_constraintStart_toStartOf="@+id/alert_alarm_radio_group" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fav_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/set_alarm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_alarm_radio_group">

        <TextView
            android:id="@+id/select_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/select_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_title"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_fav"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_title"
            tools:listitem="@layout/fav_item_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>